# legi-equity-monitor

./: .cursorrules  .env.example  .gitignore  README.md  middleware.ts  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.ts  tsconfig.json
.cursor/: next-js.mdc  python.mdc
app/: globals.css  layout.tsx  manifest.json  not-found.tsx  page.tsx  robots.ts  sitemap.ts  types.ts
bill-analysis-design/: Legislative Theme Analysis System.md  admin-ui-clustering.md  ai-image-generator.md  bill-filters.md  bill-passage.md  bill-processing-workflow.md  bills-on-blog-page.md  bills_input_json_structuree.md  blog_listing.md  category-subgroups.md  cluster-input-analysis.md  clustering-blogging-pipeline.md  google-analytics-tracking.md  implementation-plan.md  legi-scan-scheema.md  llm-prompt.md  lookup-sponsor-zipcode.md  output-structure.md  project-statement.md  semantic-search.md
db/: index.ts
indexing_service/: clustering.py  config.py  indexer.py  models.py  requirements.txt  test_setup.py
lib/: date-utils.ts  db.ts  mockData.ts
migrations/: 001_create_bill_analysis_tables.sql  002_add_vector_search.sql  003_add_cluster_analysis.sql  004_add_blog_post_images.sql  004_remove_vectors.sql  005_remove_blog_references.sql  006_add_no_theme_status.sql  007_add_demographic_impacts.sql  008_create_users_table.sql  009_add_blog_search.sql  010_add_blog_generation.sql  011_add_blog_posts_to_vector_search.sql  012_add_entity_uuid_to_vector_index.sql  013_update_vector_index_entity_type.sql  014_add_us_legislators_schema.sql  (+9 more)
(+238 files in other folders)
